Deleted contact page.

--- a/helpPage.html
+++ b/helpPage.html
@@ -18,7 +18,6 @@
     <img alt="Computer Image" class="headerImage2" src="../images/headerImage2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div> <!--Name of the page-->
-      <a href="../contact.html">CONTACT</a> <!--Link to contact page-->
       <a href="../helpPage.html">HELP</a> <!--Link to the help page-->
       <a href="../index.html">HOME</a> <!--Link to the home page-->
     </nav>
@@ -44,6 +43,14 @@
           </div>
         </div>
         <div id="examplePopup">CONGRATULATIONS!</div> <!--Displays after button is clicked-->
+      </div>
+      <br><hr><br>
+
+      <!--...-->
+      <div class="...">
+        <h2></h2>
+        <br><br><br>
+        <p><b></b></p> 
       </div>
     </div>
 
