--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <img alt="Computer Image" class="headerImage2" src="../images/headerImage2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div> <!--Name of the page-->
-      <a href="../contact.html">CONTACT</a> <!--Link to contact page-->
       <a href="../helpPage.html">HELP</a> <!--Link to the help page-->
       <a href="../index.html">HOME</a> <!--Link to the home page-->
     </nav>
@@ -178,7 +177,7 @@
           <p>Download different types of apps for your phone. The following functions are included in the app:</p>
           <ul>
             <li>To download an app, enter either keywords or the name of the app. This will provide you with a list of recommended apps that you can download by clicking on the desired one.</li>
-            <li>At the bottom of the page you are able to change between Games, Apps, Movies and Books. This will change the home page to related apps that you can browse through.</li>
+            <li>At the bottom of the page you are able to change between Games, Apps, Movies and Books, depending on what you want to download.</li>
           </ul>
         </div>
             
@@ -188,6 +187,7 @@
       <!--Apps-->
       <div class="sectionApps">
         <p class="title">APPS.</p>
+        <p class="description">Clicking the following apps will bring you to another page, explaining how to use that specific app. To return to this page click the "HOME" button in the top right corner.</p>
         <br>
 
         <!--Facebook-->
